<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us"/>
        <item android:id="@+id/prices"
            android:icon="@drawable/ic_units"
            android:title="@string/sitima_prices"/>
        <item android:id="@+id/device"
            android:icon="@drawable/ic_sensor"
            android:title="@string/my_usage_by_device"/>
        <item android:id="@+id/totalusage"
            android:icon="@drawable/ic_usage"
            android:title="@string/my_total_usage"/>
        <item android:id="@+id/range"
            android:icon="@drawable/ic_daterange"
            android:title="@string/my_usage_by_data_by_range"/>
        <item android:id="@+id/service"
            android:icon="@drawable/ic_request"
            android:title="@string/request_service"/>
        <item android:id="@+id/repoproduct"
            android:icon="@drawable/ic_product"
            android:title="@string/request_product"/>
        <item android:id="@+id/issues"
            android:icon="@drawable/ic_reportissue"
            android:title="@string/report_an_issue"/>
        <item android:id="@+id/contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact_us"/>


    </group>



</menu>